removed legacy code; converting 2.0 codebase into 3.0 codebase

--- a/Babel17_Docs/spec/babel17.tex
+++ b/Babel17_Docs/spec/babel17.tex
@@ -1550,7 +1550,7 @@ object
   ....
 end
 \end{babellisting}
-In case your object cannot convert to $t$, it should throw a \emph{CannotConvert}-exception.
+In case your object cannot convert to $t$, it should throw a \emph{TypeConversionError}-exception.
 
 You can annotate your \emph{def}-statements with a \emph{return type} $t$, for example:
 \begin{babellisting}
