--- a/Babel17_Docs/spec/babel17.tex
+++ b/Babel17_Docs/spec/babel17.tex
@@ -1385,7 +1385,7 @@ A module may contain type definition statements. A new type $t$ is introduced vi
 \begin{babellisting}
 typedef $t$ $pat$ = $expr$
 \end{babellisting}
-where $t$ is an identifier, $pat$ a pattern and $expr$ an expression. Like a \babelsrc{def} statement, the above introduces a new function $t$. Unlike a \babelsrc{def} statement, it also introduces a new type $t$. The new function $t$ has the property that all non-exceptional values $v$ it returns will have type $t$ and will consist of two components: an \emph{inner value}, and an \emph{outer value}. The inner value $i$ is just the argument that was passed to $t$. The outer value $o$ is the result of evaluating $expr$ in case this evaluation does not lead to an exception. If this evaluation leads to an exception or if $pat$ does not match, then a \emph{TypeError}-exception is thrown. 
+where $t$ is an identifier, $pat$ a pattern and $expr$ an expression. Like a \babelsrc{def} statement, the above introduces a new function $t$. Unlike a \babelsrc{def} statement, it also introduces a new type $t$. The new function $t$ has the property that all non-exceptional values $v$ it returns will have type $t$ and will consist of two components: an \emph{inner value}, and an \emph{outer value}. The inner value $i$ is just the argument that was passed to $t$. The outer value $o$ is the result of evaluating $expr$ in case this evaluation does not lead to an exception. If $pat$ does not match, then a \emph{TypeError}-exception is thrown. 
 
 The point of all this is that the value $v$ behaves just like its outer value $o$, i.e. $v$ responds to the same messages as $o$, and does so in the same way. Nevertheless, the type of $v$ is $t$, whatever the type of $o$ might be. This means that you can implement the behavior of $v$ by choosing an appropriate $o$ which accesses the hidden encapsulated state $i$. This hidden state can also be accessed in the module in which the type has been defined via the \emph{inner-value pattern} ($t$\ $p$) which matches $v$ if it has type $t$ and its inner value $i$ matches $p$.
 
