--- a/Babel17_Docs/spec/babel17.tex
+++ b/Babel17_Docs/spec/babel17.tex
@@ -1326,6 +1326,9 @@ Pragmas are statements that are not really part of the program, but inserted in 
 
 \texttt{\#assert $e$} evaluates the expression $e$ and signals an error if $e$ does not evaluate to \babelsrc{true}.
 
+\texttt{\#catch $p$ try $e$} evaluates the expression $e$ and signals an error if $e$ does not evaluate to an exception with a paramter that matches $p$.
+
+
 The Babel-17 interpreter / compiler is free to ignore pragmas, typically if instructed so by the user. 
 
 \section{Modules and Types}\label{modules}
